--- a/FetoTech/FeroTech.Web/appsettings.json
+++ b/FetoTech/FeroTech.Web/appsettings.json
@@ -1,7 +1,7 @@
 {
-    "ConnectionStrings": {
-        "DefaultConnection": "Server=NaQeeB-Azizi\\SQLEXPRESS;Database=FeroTech-Demo;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
-    },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=ARIF166\\SQLEXPRESS;Database=FeroTech-Demo;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
