--- a/FetoTech/FeroTech.Web/appsettings.json
+++ b/FetoTech/FeroTech.Web/appsettings.json
@@ -1,12 +1,12 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Server=ARIF166\\SQLEXPRESS;Database=FeroTech-Demo;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
+        "DefaultConnection": "Server=NaQeeB-Azizi\\SQLEXPRESS;Database=FeroTech-Demo;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
     },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*"
 }
