--- a/.gitignore
+++ b/.gitignore
@@ -400,3 +400,4 @@ FodyWeavers.xsd
 # JetBrains Rider
 *.sln.iml
 FetoTech/FeroTech.Web/appsettings.json
+FetoTech/FeroTech.Web/Controllers/DistributedAssetController.cs
