--- a/FetoTech/FeroTech.Web/FeroTech.Web.csproj
+++ b/FetoTech/FeroTech.Web/FeroTech.Web.csproj
@@ -13,10 +13,16 @@
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="8.0.14" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.14" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.14" />
+    <PackageReference Include="PdfSharpCore" Version="1.3.67" />
+    <PackageReference Include="QRCoder" Version="1.7.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\FeroTech.Infrastructure\FeroTech.Infrastructure.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\qrcodes\" />
   </ItemGroup>
 
 </Project>
