--- a/FetoTech/FeroTech.Web/FeroTech.Web.csproj
+++ b/FetoTech/FeroTech.Web/FeroTech.Web.csproj
@@ -8,6 +8,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="wwwroot\Pages\Account\Login.cshtml.cs" />
+    <Content Remove="wwwroot\Pages\Account\ResetPassword.cshtml.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Include="wwwroot\Pages\Account\Login.cshtml.cs" />
+    <Compile Include="wwwroot\Pages\Account\ResetPassword.cshtml.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="8.0.14" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.14" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="8.0.14" />
@@ -17,6 +27,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\FeroTech.Infrastructure\FeroTech.Infrastructure.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Areas\Identity\" />
   </ItemGroup>
 
 </Project>
